package com.campus.learningspace.entity;

import com.baomidou.mybatisplus.annotation.*;
import lombok.Data;

import java.math.BigDecimal;
import java.time.LocalDateTime;

@Data
@TableName("library")
public class Library {

    @TableId(type = IdType.AUTO)
    private Long id;

    private String name;

    private String address;

    private Integer floorCount;

    private String description;

    private BigDecimal latitude;

    private BigDecimal longitude;

    private String openingHours;

    private Integer status;

    @TableField(fill = FieldFill.INSERT)
    private LocalDateTime createTime;

    @TableField(fill = FieldFill.INSERT_UPDATE)
    private LocalDateTime updateTime;

    @TableLogic
    private Integer deleted;
}

